@@ -10,7 +10,7 @@ using System.Runtime.InteropServices;
 [assembly: AssemblyConfiguration("")]
 [assembly: AssemblyCompany("MCDawn Dev Team")]
 [assembly: AssemblyProduct("MCDawn")]
-[assembly: AssemblyCopyright("Copyright © 2012")]
+[assembly: AssemblyCopyright("Copyright © 2012-2013")]
 [assembly: AssemblyTrademark("")]
 [assembly: AssemblyCulture("")]
 
@@ -31,7 +31,7 @@ using System.Runtime.InteropServices;
 //
 // You can specify all the values or you can default the Build and Revision Numbers 
 // by using the '*' as shown below:
-// [assembly: AssemblyVersion("1.0.1.9")]
-//[assembly: AssemblyVersion("1.0.1.9")]
-//[assembly: AssemblyFileVersion("1.0.1.9")]
-[assembly: AssemblyVersion("1.0.1.9")]
+// [assembly: AssemblyVersion("1.0.2.0")]
+//[assembly: AssemblyVersion("1.0.2.0")]
+//[assembly: AssemblyFileVersion("1.0.2.0")]
+[assembly: AssemblyVersion("1.0.2.0")]
