@@ -10,6 +10,7 @@ MCDawn 1.0.2.0
 -Fixed various Console GUI bugs.
 -In Console GUI, Errors tab has been changed to Logs/Errors tab.
 -Map Viewer in Console GUI works as intended, no longer stretches or distorts size of images.
+-Fixed MySQL database error for email usernames in zones.
 
 MCDawn 1.0.1.9
 -Updated Commands
